# vaultier

./: Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/: CODEOWNERS
.github/workflows/: clippy.yaml  rust.yaml
src/: auth.rs  error.rs  lib.rs  metadata.rs
