[package]
name = "vaultier"
version = "0.3.0"
edition = "2021"
authors = ["Mathias Oertel <mathias.oertel@commercetools.com>", "Nelu Snegur <nelu.snegur@commercetools.com>", "Andreas Drobisch <andreas.drobisch@commercetools.com>"]
description = "Crate to write and read secrets from Hashicorp Vault."
documentation = "https://docs.rs/vaultier"
readme = "README.md"
keywords = ["secrets", "vault", "hashicorp"]
categories = ["secrets"]
license = "MIT"
repository = "https://github.com/commercetools/vaultier"

[dependencies]
serde = "1.0"
vaultrs = "0.7"

[features]
default = ["token", "read"]
token = []
auth = []
read = []
write = []
full = ["token", "auth", "read", "write"]
