[package]
name = "vaultier"
version = "0.4.0"
edition = "2021"
authors = ["Mathias Oertel <mathias.oertel@commercetools.com>", "Nelu Snegur <nelu.snegur@commercetools.com>", "Andreas Drobisch <andreas.drobisch@commercetools.com>"]
description = "Crate to write and read secrets from Hashicorp Vault."
documentation = "https://docs.rs/vaultier"
readme = "README.md"
keywords = ["vault", "hashicorp"]
categories = ["secrets"]
license = "MIT"
repository = "https://github.com/commercetools/vaultier"

[dependencies]
serde = "1.0"
vaultrs = "0.7"
thiserror = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json"], optional = true }
serde_json = { version = "1.0", optional = true }
url = { version = "2.2", optional = true }

[features]
default = ["token", "read"]
token = []
auth = []
read = []
write = []
metadata = ["reqwest", "serde_json", "url"]
full = ["token", "auth", "read", "write", "metadata"]
